--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -6,8 +6,8 @@
 </head>
 <body>
 <ul>
-{% for c in clients %}
-<li><a href={{ url_for('client', ip=c.dir) }}>{{ c.dir }} {{ c.time }}</a></li>
+{% for f in files %}
+<li><a href={{ url_for('viewer', filename=f) }}>{{ f }}</a></li>
 {% endfor %}
 </ul>
 </body>
