add static files and datatables

--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -3,12 +3,39 @@
 <head>
 <title>
 </title>
+<!--<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script> -->
+<script type="text/javascript" src="{{ url_for('static', filename='jquery-3.2.1.slim.min.js') }}"></script>
+<script type="text/javascript" src="{{ url_for('static', filename='jquery.dataTables.min.js') }}"></script>
+<link rel="stylesheet" href="{{ url_for('static', filename='jquery.dataTables.min.css') }}" type="text/css">
 </head>
 <body>
-<ul>
-{% for f in files %}
-<li><a href={{ url_for('viewer', filename=f) }}>{{ f }}</a></li>
-{% endfor %}
-</ul>
+<table id='asdf'>
+    <thead>
+        <tr>
+            <th>Date and Time</th>
+            <th>IP</th>
+            <th>FileName</th>
+        </tr>
+    </thead>
+    <tbody>
+    {% for f in files %}
+    {% set data = f.split('-') %}
+    <a href={{ url_for('viewer', filename=f) }}>
+        <tr>
+            <td>{{ data[0] }} </td>
+            <td>{{ data[1] }}</td>
+            <td>{{ data[2] }}</td>
+        </tr>
+    </a>
+    {% endfor %}
+    </tbody>
+</table>
+<script>
+$(document).ready(function() {
+    $('#asdf').DataTable();
+});
+//$('file_list').DataTable( {
+
+</script>
 </body>
 </html>
