--- a/server/templates/log.html
+++ b/server/templates/log.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title> </title>
-    <script type="text/javascript" src="{{ url_for('static', filename = 'jquery-3.2.1.slim.min.js') }}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'bootstrap.min.css') }}" type="text/css">
-    <link rel="stylesheet" href="{{ url_for('static', filename = 'main.css') }}" type="text/css">
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block content %}
 {% autoescape false %}
 {{ text }}
 {% endautoescape %}
@@ -20,6 +14,5 @@ $.expr[':'].contains = $.expr.createPseudo(function(arg) {
 $('p:contains("fault")').addClass('mark');
 $('p:contains("error")').addClass('mark');
 </script>
-</body>
-</html>
+{% endblock %}
 
