--- a/server/static/main.css
+++ b/server/static/main.css
@@ -1,5 +1,5 @@
 body p {
-    font-family: Consolas, monospace;
+    font-family: Menlo,Monaco,Consolas,"Courier New",monospace;
 }
 p {
     margin: 0px;
@@ -9,10 +9,14 @@ p:hover {
     background-color: #f0f0f0;
 }
 p.mark {
-    background-color: #33f0f0;
+    background-color: #f03333;
 }
 
 #logs tr:hover {
     background-color: #f0f0f0;
+}
+
+pre.sar {
+    font-size: 1em;
 }
 
