--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
     <div class="navbar-header">
         <a class="navbar-brand" href="{{ url_for('index') }}">SELOG</a>
     </div>
+    <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+            <li><a href="{{ url_for('download', f='client.zip') }}">client</a></li>
+        </ul>
+    </div>
 </div>
 </nav>
 <div class="container-fluid">
