--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     </div>
     <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-            <li><a href="{{ url_for('download', f='client.zip') }}">client</a></li>
+            <li><a href="{{ url_for('download', f='client.zip') }} download">client</a></li>
         </ul>
     </div>
 </div>
